default/objects/pq_CRUSH_Account_Plan_User_Setting__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>CRUSH Account Plan User Settings</relationshipLabel>
    <relationshipName>CRUSH_Account_Plan_User_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>